[project]
name = "dft-theme"
version = "0.1.0"
description = "A custom reusable Sphinx theme for DfT"
authors = [{name = "Ben Pauley", email = "ben.pauley@dft.gov.uk"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"

[tool.setuptools]
packages = ["dft_theme"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"dft_theme" = [
  "theme.conf",
  "*.html",
  "templates/**",
  "static/**"
]

[project.entry-points."sphinx.html_themes"]
dft = "dft_theme"
